--- a/app/src/main/res/layout-v21/activity_login.xml
+++ b/app/src/main/res/layout-v21/activity_login.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".UI.LoginActivity">
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minWidth="70dp"
+        android:minHeight="70dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -69,7 +81,7 @@
                 android:onClick="register"
                 android:layout_marginTop="16dp"
                 android:background="#ffccbc"
-                android:textColor="#FFFFFF"
+                android:textColor="@color/Background_Apk"
                 android:text="@string/register"/>
 
             <com.facebook.login.widget.LoginButton
