--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".UI.LoginActivity">
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minWidth="70dp"
+        android:minHeight="70dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -30,7 +42,9 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:theme="@style/TextInputOrangeLayoutStyle">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/login_EditText"
@@ -43,7 +57,9 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:theme="@style/TextInputOrangeLayoutStyle">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/password_EditText"
@@ -69,7 +85,7 @@
                 android:onClick="register"
                 android:layout_marginTop="16dp"
                 android:background="#ffccbc"
-                android:textColor="#FFFFFF"
+                android:textColor="@color/Background_Apk"
                 android:text="@string/register"/>
 
             <com.facebook.login.widget.LoginButton
