--- a/app/src/main/res/layout/list_item_breed.xml
+++ b/app/src/main/res/layout/list_item_breed.xml
@@ -12,14 +12,14 @@
         android:background="@drawable/btn_apt_casa"
         android:padding="8dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginRight="16dp">
 
         <ImageView
             android:id="@+id/dogImageView"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginTop="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,22 +43,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="18dp"
-            android:textColor="#F04F24"
+            android:textColor="@color/Cor_Perfeito"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/dogImageView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toRightOf="@id/breedTextView"
             app:layout_constraintTop_toTopOf="@+id/dogImageView" />
-
-        <!--ImageView
-            android:id="@+id/scoreImageView"
-            android:layout_width="120dp"
-            android:layout_height="60dp"
-            app:layout_constraintBottom_toBottomOf="@+id/dogImageView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/dogImageView"
-            app:srcCompat="@drawable/image_perfect" /-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
